DX/dev/force-app/main/default/objects/ApexCustomLog__c/ApexCustomLog__c.object-meta.xml
<CustomObject>
    <label>ApexCustomLog</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ApexCustomLog</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>