DX/dev/force-app/main/default/objects/ApexCustomLog__c/fields/ExecutionUser__c.field-meta.xml
<CustomField>
    <fullName>ExecutionUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ExecutionUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApexCustomLog</relationshipName>
    <type>Lookup</type>
</CustomField>