DX/dev/force-app/main/default/objects/ApexCustomLog__c/fields/LogMessage__c.field-meta.xml
<CustomField>
    <fullName>LogMessage__c</fullName>
    <label>LogMessage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>