DX/dev/force-app/main/default/objects/ApexCustomLog__c/recordTypes/Type.recordType-meta.xml
<RecordType>
    <fullName>Type</fullName>
    <active>true</active>
    <label>Type</label>
</RecordType>